# FastECS

./: .gitignore  CMakeLists.txt  FastECS.hpp  README.md  TinyECS.hpp  build-clang.bat  build-mingw.bat  build-msvc-2019.bat  build-msvc-2022.bat  build-msvc.bat
UnitTest/: CMakeLists.txt  Common.hpp  MathLib.hpp  main.cpp
cmake/: clang-cl.cmake  gcc.cmake
